--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                 </h1>
                 <div class="header__content-images">
                     <img src="images/airpods-black.png" alt="">
-                    <!-- <img src="images/airpods-blue.png" alt=""> 
+                    <img src="images/airpods-blue.png" alt=""> 
                     <img src="images/airpods-green.png" alt="">
                     <img src="images/airpods-red.png" alt="">
-                    <img src="images/airpods-white.png" alt=""> -->
+                    <img src="images/airpods-white.png" alt="">
                 </div>
             </div>
         </div>
