--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                 </h1>
                 <div class="header__content-images">
                     <img src="images/airpods-black.png" alt="">
-                    <img src="images/airpods-blue.png" alt=""> 
+                    <!-- <img src="images/airpods-blue.png" alt=""> 
                     <img src="images/airpods-green.png" alt="">
                     <img src="images/airpods-red.png" alt="">
-                    <img src="images/airpods-white.png" alt="">
+                    <img src="images/airpods-white.png" alt=""> -->
                 </div>
             </div>
         </div>
@@ -63,7 +63,7 @@
                     <button class="choose-color__btn">
                         <img src="images/btn-black.png" alt="black">
                     </button> 
-                    <!-- <button class="choose-color__btn">
+                    <button class="choose-color__btn">
                         <img src="images/btn-blue.png" alt="blue">
                     </button>    
                     <button class="choose-color__btn">
@@ -74,7 +74,7 @@
                     </button>
                     <button class="choose-color__btn">
                         <img src="images/btn-white.png" alt="white">
-                    </button> -->
+                    </button>
                 </div>
             </div>
         </section>
