--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                     The ultimate personal audio experience.
                 </p>
                 <div class="choose-color__list">
-                    <button class="choose-color__btn">
-                        <img src="images/btn-black.png" alt="black">
+                    <!-- <button class="choose-color__btn">
+                        <img src="images/btn-black.png" alt="black"> -->
                     </button> 
                     <button class="choose-color__btn">
                         <img src="images/btn-blue.png" alt="blue">
