--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
                     <span class="title__air">Air</span><span class="title__pod">Pod</span><span class="title__s">S</span><span class="title__m">M</span><span class="title__ax">AX</span>
                 </h1>
                 <div class="header__content-images">
-                    <img src="images/airpods-black.png" alt="">
-                    <!-- <img src="images/airpods-blue.png" alt=""> 
-                    <img src="images/airpods-green.png" alt="">
-                    <img src="images/airpods-red.png" alt="">
-                    <img src="images/airpods-white.png" alt=""> -->
+                    <img class="content-item color--green" src="images/airpods-green.png" alt="">
+                    <img class="content-item color--red" src="images/airpods-red.png" alt="">
+                    <img class="content-item color--white" src="images/airpods-white.png" alt="">
+                    <img class="content-item color--black content-item__active" src="images/airpods-black.png" alt="">
+                    <img class="content-item color--blue" src="images/airpods-blue.png" alt=""> 
                 </div>
             </div>
         </div>
@@ -60,19 +60,19 @@
                     The ultimate personal audio experience.
                 </p>
                 <div class="choose-color__list">
-                    <!-- <button class="choose-color__btn">
-                        <img src="images/btn-black.png" alt="black"> -->
+                    <button class="choose-color__btn choose-color__btn--active" data-button="color--black">
+                        <img src="images/btn-black.png" alt="black">
                     </button> 
-                    <button class="choose-color__btn">
+                    <button class="choose-color__btn" data-button="color--blue">
                         <img src="images/btn-blue.png" alt="blue">
                     </button>    
-                    <button class="choose-color__btn">
+                    <button class="choose-color__btn" data-button="color--green">
                         <img src="images/btn-green.png" alt="green">
                     </button> 
-                    <button class="choose-color__btn">
+                    <button class="choose-color__btn" data-button="color--red">
                         <img src="images/btn-red.png" alt="red">
                     </button>
-                    <button class="choose-color__btn">
+                    <button class="choose-color__btn" data-button="color--white">
                         <img src="images/btn-white.png" alt="white">
                     </button>
                 </div>
@@ -95,11 +95,11 @@
                         <p>The telescoping arms expand and stay in any position you want, allowing you to maintain fit and isolation.
                         </p>
                     </div>
-                    <img class="" src="images/side-black.jpg" alt="">
-                    <!-- <img class="" src="images/side-blue.jpg" alt="">
-                    <img class="" src="images/side-green.jpg" alt="">
-                    <img class="" src="images/side-white.jpg" alt="">
-                    <img class="" src="images/side-red.jpg" alt=""> -->
+                    <img class="content-item color--black content-item__active" src="images/side-black.jpg" alt="">
+                    <img class="content-item color--blue" src="images/side-blue.jpg" alt="">
+                    <img class="content-item color--green" src="images/side-green.jpg" alt="">
+                    <img class="content-item color--white" src="images/side-white.jpg" alt="">
+                    <img class="content-item color--red" src="images/side-red.jpg" alt="">
                 </div>
             </div>
         </section>
@@ -111,11 +111,11 @@
                 <p class="case__text">
                     When stored in the sleek and lightweight Smart Case , AirPods Max enter a low-power state to save energy.
                 </p>
-                <img src="images/case-black.jpg" alt="case-black">
-                <!-- <img src="images/case-blue.jpg" alt="case-blue">
-                <img src="images/case-green.jpg" alt="case-green">
-                <img src="images/case-red.jpg" alt="case-red">
-                <img src="images/case-white.jpg" alt="case-white"> -->
+                <img class="content-item color--black content-item__active" src="images/case-black.jpg" alt="case-black">
+                <img class="content-item color--blue" src="images/case-blue.jpg" alt="case-blue">
+                <img class="content-item color--green" src="images/case-green.jpg" alt="case-green">
+                <img class="content-item color--red" src="images/case-red.jpg" alt="case-red">
+                <img class="content-item color--white" src="images/case-white.jpg" alt="case-white">
                 <h2 class="energy__title main__title">
                     Stayin' alive, stayin' alive.
                 </h2>
